--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,6 @@ input,
 select,
 textarea {
     color: #222;
-    background-color: black;
 }
 
 html {
@@ -97,6 +96,10 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+
+html,body {
+    background: black;
+}
 
 div {
     border-radius: 5px;
