--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,12 @@ div {
     margin: 0px auto;
 }
 
+#cardContainer {
+    max-width: 900px;
+    margin: 0px auto;
+    padding: 0px 25px;
+}
+
 #header {
     width: 100%;
     background-color: gray;
@@ -142,7 +148,6 @@ div {
     margin-left: auto;
     margin-right: auto;
     color: silver;
-    width: 50%;
 }
 
 .red {
