added Shining character

--- a/css/main.css
+++ b/css/main.css
@@ -184,6 +184,9 @@ div {
     color: green;
 }
 
+.blue {
+    color: blue;
+}
 
 
 /* ==========================================================================
