--- a/css/main.css
+++ b/css/main.css
@@ -195,6 +195,9 @@ div {
 #back a {
     color: silver;
     text-decoration: none;
+    font-family: cursive;
+    font-weight: bold;
+    font-size: 16px;
 }
 
 
