--- a/css/main.css
+++ b/css/main.css
@@ -193,11 +193,10 @@ div {
 }
 
 #back a {
-    color: silver;
+    color: white;
     text-decoration: none;
-    font-family: cursive;
-    font-weight: bold;
-    font-size: 16px;
+    font-family: Verdana;
+    font-size: 20px;
 }
 
 
