--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,7 @@ div {
     background-color: gray;
     margin-bottom: 10px;
     text-align: center;
+    color: silver;
 }
 
 #left {
@@ -144,8 +145,6 @@ div {
 }
 
 .explanation {
-    margin-left: auto;
-    margin-right: auto;
     color: silver;
 }
 
@@ -154,9 +153,6 @@ div {
 }
 
 .charName {
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
     text-align: center;
     color: white;
 }
@@ -190,6 +186,10 @@ div {
 
 .white {
     color: white;
+}
+
+.silver {
+    color: silver;
 }
 
 #back a {
