added a few more characters

--- a/css/main.css
+++ b/css/main.css
@@ -200,6 +200,10 @@ div {
     font-size: 20px;
 }
 
+.filterOption {
+    padding: 5px;
+}
+
 
 /* ==========================================================================
    Helper classes
