--- a/css/main.css
+++ b/css/main.css
@@ -172,9 +172,10 @@ div {
     padding-bottom: 25px;
     padding-left: 25px;
     padding-right: 25px;
+    text-align: center;
 }
 .small-card img {
-    width: 100%;
+    width: 80%;
 }
 
 .green {
