added bottom padding to the filters

--- a/css/main.css
+++ b/css/main.css
@@ -205,6 +205,10 @@ div {
     padding: 5px;
 }
 
+.filter {
+    padding-bottom: 5px;
+}
+
 
 /* ==========================================================================
    Helper classes
