--- a/css/main.css
+++ b/css/main.css
@@ -209,7 +209,17 @@ div {
     padding-bottom: 5px;
 }
 
-
+input[type='checkbox'] {
+    -webkit-appearance:none;
+    width:30px;
+    height:30px;
+    background:white;
+    border-radius:5px;
+    border:2px solid #555;
+}
+input[type='checkbox']:checked {
+    background: #00bf00;
+}
 
 /* ==========================================================================
    Helper classes
